# IIP_kiosk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/dlib_face_detection/: README.md  test.cpp
example/get_audio_n_STFT/: CMakeLists.txt  test.cpp
script/: install_opencv.sh
src/: MB1434.h
test/dlib_face_detection/: CMakeLists.txt
test/get_audio_n_STFT/: README.md
test/run_pytorch_model_in_cpp/: README.md
